[gd_scene load_steps=3 format=3 uid="uid://bw2i8e67rp11k"]

[ext_resource type="Script" uid="uid://d3q4soo3s5ar6" path="res://Weapons/Poison/PoisonArea.gd" id="1_8wwk0"]

[sub_resource type="SphereMesh" id="SphereMesh_61g1p"]
radius = 50.0
height = 100.0

[node name="PoisonArea" type="Node2D"]
script = ExtResource("1_8wwk0")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
modulate = Color(0.0666666, 1, 0, 0.196078)
mesh = SubResource("SphereMesh_61g1p")

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="ExpirationTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="ExpirationTimer" to="." method="_on_expiration_timer_timeout"]
